Fix minor layout issues

--- a/src/assets/theming/_base.scss
+++ b/src/assets/theming/_base.scss
@@ -302,5 +302,7 @@ blockquote {
   width: 30px;
 }
 
-
+.no-click {
+  pointer-events: none;
+}
 
